Add title prop to Layout component for dynamic document titles

--- a/portafolio-test-proyect/src/pages/index.astro
+++ b/portafolio-test-proyect/src/pages/index.astro
@@ -1,3 +1,4 @@
+
 ---
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
@@ -6,8 +7,9 @@ import Layout from '../layouts/Layout.astro';
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="portafolio test">
+    <Welcome />
 </Layout>
 
-title
+
+
