--- a/portafolio-test-proyect/src/layouts/Layout.astro
+++ b/portafolio-test-proyect/src/layouts/Layout.astro
@@ -1,3 +1,8 @@
+---
+// Accept a title prop so pages can set the document title
+const { title = 'Astro Basics' } = Astro.props;
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,7 +10,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
 	<body>
 		<slot />
