--- a/portafolio-test-proyect/src/pages/index.astro
+++ b/portafolio-test-proyect/src/pages/index.astro
@@ -1,14 +1,15 @@
 
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout title="portafolio test">
-    <Welcome />
+	<main>
+		<div>
+			<h1>PORTAFOLIO</h1>
+			<p>Prueba de sitio portafolio</p>
+		</div>
+	</main>
 </Layout>
 
 
